@@ -20,6 +20,13 @@ android {
     }
 }
 
+tasks.withType<Test> {
+    jvmArgs(
+        "--add-exports", "java.security.jgss/sun.security.krb5=ALL-UNNAMED",
+        "--add-exports", "java.base/sun.security.util=ALL-UNNAMED"
+    )
+}
+
 dependencies {
     testImplementation("junit:junit:4.13.2")
 }
